# localvisual

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: release.yml
res/: resources.rc
src/: app.rs  config.rs  format.rs  main.rs  ui.rs
