[package]
name = "localvisual"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22"
egui = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rfd = "0.11"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }  # Add this line